<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:text="@string/title"/>
            <EditText android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:id="@+id/title"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:text="@string/body"/>
            <EditText android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:id="@+id/body"
                    android:minLines="5"
                    android:scrollbars="vertical"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/date"/>
            <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:id="@+id/date" android:text="@string/select_date"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/time"/>
            <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:id="@+id/time" android:text="@string/select_time"/>
            <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:id="@+id/confirm" android:text="@string/confirm"/>


    </LinearLayout>

</ScrollView>